--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dawang",
   "version": "0.1.0",
   "private": true,
+  "homepage":".",
   "dependencies": {
     "@babel/core": "7.7.4",
     "@babel/helper-create-regexp-features-plugin": "^7.7.4",
